hydra/test/test_examples/type_errors/undeclared_var_for.tpc

init {
    for (x in l) {
        
    }
} 
telemetry {} 
check {}